5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1594_2425.log
== TEST (2019-04-04 16:38:58) 
-- CODE:
D=float(input("Qual a distancia percorrida: ?"))
L=float(input("Qual o total de combustivel gasto: ?"))

C=(D/L)

print(round(C,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:39:42) 
-- CODE:
D=float(input("Qual a distancia percorrida: ?"))
L=float(input("Qual o total de combustivel gasto: ?"))

C=(D/L)

print(round(C,3))
-- EXECUTION TIME:
0.184242
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:40:07) 
-- CODE:
D=float(input("Qual a distancia percorrida: ?"))
L=float(input("Qual o total de combustivel gasto: ?"))

C=(D/L)

print(round(C,3)string(.km/l))
-- ERROR:
File "XXXX", line 6
    print(round(C,3)string(.km/l))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:40:12) 
-- CODE:
D=float(input("Qual a distancia percorrida: ?"))
L=float(input("Qual o total de combustivel gasto: ?"))

C=(D/L)

print(round(C,3)string(km/l))
-- ERROR:
File "XXXX", line 6
    print(round(C,3)string(km/l))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:41:19) 
-- CODE:
D=float(input("Qual a distancia percorrida: ?"))
L=float(input("Qual o total de combustivel gasto: ?"))

C=(D/L)

print(round(C,3), "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:41:28) 
-- CODE:
D=float(input("Qual a distancia percorrida: ?"))
L=float(input("Qual o total de combustivel gasto: ?"))

C=(D/L)

print(round(C,3), "km/l")
-- EXECUTION TIME:
0.144631
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
